Improve tests and fix related controller file
