# api.yaml
@@ -27,8 +27,12 @@ paths:
         schema:
           $ref: "#/definitions/User"
       responses:
-        default:
+        "200":
           description: "successful operation"
+          schema:
+            $ref: "#/definitions/User"
+        "400":
+          description: "Underage user not allowed"
     get:
       tags:
       - "user"
